Added dummy student Data

--- a/index.html
+++ b/index.html
@@ -77,6 +77,63 @@
             <span class="left">Batch: <span class="highlighter">22r</span></span>
             <span class="center">Batch Students</span>
         </div>
+        <div class="navsHeader">
+            <li>SI</li>
+            <li>Name</li>
+            <li>Qualification</li>
+            <li>Mode of Classes</li>
+        </div>
+
+        <div class="studentsInfo">
+            <ul>
+                <li>1</li>
+                <li>Eshwar</li>
+                <li>MCA</li>
+                <li>Offline</li>
+            </ul>
+            <ul>
+                <li>info1</li>
+                <li>info2</li>
+                <li>info3</li>
+                <li>info4</li>
+            </ul>
+            <ul>
+                <li>info1</li>
+                <li>info2</li>
+                <li>info3</li>
+                <li>info4</li>
+            </ul>
+            <ul>
+                <li>info1</li>
+                <li>info2</li>
+                <li>info3</li>
+                <li>info4</li>
+            </ul>
+            <ul>
+                <li>info1</li>
+                <li>info2</li>
+                <li>info3</li>
+                <li>info4</li>
+            </ul>
+            <ul>
+                <li>info1</li>
+                <li>info2</li>
+                <li>info3</li>
+                <li>info4</li>
+            </ul>
+            <ul>
+                <li>info1</li>
+                <li>info2</li>
+                <li>info3</li>
+                <li>info4</li>
+            </ul>
+            <ul>
+                <li>info1</li>
+                <li>info2</li>
+                <li>info3</li>
+                <li>info4</li>
+            </ul>
+        </div>
     </div>
 </body>
 
